# lean-bdiff

./: .gitignore  CLAUDE.md  Ffi.lean  LeanBdiff.lean  README.md  lake-manifest.json  lakefile.toml
.claude/: settings.local.json
Ffi/: Export.lean
LeanBdiff/: Basic.lean  Vcdiff.lean
LeanBdiff/Vcdiff/: AddressCache.lean  CodeTable.lean  Decoder.lean  Defs.lean  Encoder.lean  Varint.lean
LeanBdiff/Vcdiff/Proofs/: AddressCache.lean  CodeTable.lean  CursorReloc.lean  Encoder.lean  GenerateInstructions.lean  InstructionSemantics.lean  PairedRoundtrip.lean  SectionBounds.lean  Varint.lean  WindowRoundtrip.lean
Test/: Bench.lean  VcdiffTest.lean
planning/: bench-baseline.md  initial-plan.md  optimise.md  profile-baseline-case01-decode.txt  profile-baseline-case01-encode.txt  profile-dec1-case01-decode.txt  profile-dec1-synthetic-decode.txt  profile-dec1-synthetic.txt  profile-dec2-synthetic-decode.txt  profile-dec3-synthetic-decode.txt  profile-dec4-synthetic-decode.txt  profile-dec5-synthetic-decode.txt  profile-dec6-synthetic-decode.txt  profile-dec7-synthetic-decode.txt  profile-dec8-synthetic-decode.txt  profile-step1.1-case01-encode.txt  profile-step1.4-case01-decode.txt  profile-step1.4-case01-encode.txt  profile-step1.6-case01-encode.txt  profile-step1.6ext-case01-encode.txt  progress.md
rust/: Cargo.toml  build.rs
rust/csrc/: shim.c
rust/csrc/Ffi/: Export.c
rust/csrc/LeanBdiff/Vcdiff/: AddressCache.c  CodeTable.c  Decoder.c  Defs.c  Encoder.c  Varint.c
rust/src/: lib.rs  sys.rs
scripts/: bench-xdelta3.sh  gen-c.sh  profile.sh
